tests/error/poly_errors/define.err
Error: Unsupported (at $FILE:11:0)
   | 
 9 | 
10 | @guppy(module)
11 | def main(x: T) -> T:
   | ^^^^^^^^^^^^^^^^^^^^
12 |     return x
   | ^^^^^^^^^^^^ Generic function definitions are not supported

Guppy compilation failed due to 1 previous error
